# exercism

./: .gitignore  README.md
clojure/: .gitignore
clojure/collatz-conjecture/: project.clj
common-lisp/collatz-conjecture/: collatz-conjecture.lisp
common-lisp/difference-of-squares/: difference-of-squares.lisp
common-lisp/gigasecond-anniversary/: gigasecond-anniversary.lisp
common-lisp/high-scores/: high-scores.lisp
common-lisp/larrys-winning-checker/: larrys-winning-checker.lisp
common-lisp/leap/: leap.lisp
common-lisp/leslies-lists/: leslies-lists.lisp
common-lisp/lillys-lasagna/: lillys-lasagna.lisp
common-lisp/log-levels/: log-levels.lisp
common-lisp/pal-picker/: pal-picker.lisp
common-lisp/pizza-pi/: pizza-pi.lisp
common-lisp/socks-and-sexprs/: socks-and-sexprs.lisp
emacs-lisp/: justfile
emacs-lisp/accumulate/: HELP.html  accumulate.el
emacs-lisp/two-fer/: two-fer.el
go/animal-magic/: animal_magic.go
go/annalyns-infiltration/: annalyns_infiltration.go
go/armstrong-numbers/: armstrong_numbers.go
go/binary-search/: binary_search.go
go/bird-watcher/: bird_watcher.go
go/blackjack/: blackjack.go
go/bob/: bob.go
go/booking-up-for-beauty/: booking_up_for_beauty.go
go/cars-assemble/: cars_assemble.go
go/census/: census.go
go/chessboard/: chessboard.go
go/collatz-conjecture/: collatz_conjecture.go
go/difference-of-squares/: difference_of_squares.go
go/election-day/: election_day.go
go/elons-toys/: elons_toys.go
go/expenses/: expenses.go
go/gigasecond/: gigasecond.go
go/grains/: grains.go
go/gross-store/: gross_store.go
go/hamming/: hamming.go
go/interest-is-interesting/: interest_is_interesting.go
go/jedliks-toys/: go.mod  jedliks_toys.go
go/lasagna-master/: lasagna_master.go
go/leap/: leap.go
go/logs-logs-logs/: logs_logs_logs.go
go/meteorology/: meteorology.go
go/need-for-speed/: need_for_speed.go
go/nucleotide-count/: nucleotide_count.go
go/parsing-log-files/: parsing_log_files.go
go/party-robot/: party_robot.go
go/perfect-numbers/: perfect_numbers.go
go/raindrops/: raindrops.go
go/resistor-color/: resistor_color.go
go/reverse-string/: reverse_string.go
go/rna-transcription/: rna_transcription.go
go/sorting-room/: sorting_room.go
go/space-age/: space_age.go
go/strain/: strain.go
go/the-farm/: the_farm.go  the_farm_test.go
go/vehicle-purchase/: vehicle_purchase.go
go/weather-forecast/: weather_forecast.go
go/welcome-to-tech-palace/: welcome_to_tech_palace.go
lua/: .luarc.json
lua/armstrong-numbers/: armstrong-numbers.lua
lua/cars-assemble/: cars-assemble.lua
lua/collatz-conjecture/: collatz-conjecture.lua
lua/leap/: leap.lua
lua/pacman-rules/: pacman-rules.lua
lua/raindrops/: raindrops.lua
lua/triangle/: triangle.lua
lua/two-fer/: two-fer.lua
nim/allergies/: allergies.nim
nim/armstrong-numbers/: armstrong_numbers  armstrong_numbers.nim  test_armstrong_numbers
nim/bob/: HELP.md  README.md  bob.nim
nim/leap/: HELP.md  (+2 more)
ocaml/: .gitignore  .merlin  README.md
ocaml/all-your-base/: all_your_base.ml  all_your_base.mli  dune  dune-project
ocaml/all-your-base/.exercism/: metadata.json
ocaml/bob/: bob.ml  dune  dune-project
ocaml/bob/.exercism/: metadata.json
ocaml/collatz-conjecture/: collatz_conjecture.ml  dune  dune-project
ocaml/collatz-conjecture/.exercism/: metadata.json
ocaml/difference-of-squares/: difference_of_squares.ml  dune  dune-project
ocaml/difference-of-squares/.exercism/: metadata.json
ocaml/leap/: dune  dune-project  leap.ml
ocaml/leap/.exercism/: metadata.json
ocaml/nucleotide-count/: dune  dune-project  nucleotide_count.ml
ocaml/nucleotide-count/.exercism/: metadata.json
ocaml/raindrops/: dune  dune-project  raindrops.ml
ocaml/raindrops/.exercism/: metadata.json
ocaml/reverse-string/: dune  dune-project  reverse_string.ml
ocaml/reverse-string/.exercism/: metadata.json
ocaml/rna-transcription/: dune  dune-project  rna_transcription.ml
ocaml/rna-transcription/.exercism/: metadata.json
ocaml/two-fer/: dune  dune-project  two_fer.ml
ocaml/two-fer/.exercism/: metadata.json
python/: README.md
(+312 files in other folders)
