(library
  (name bob)
  (modules bob)
  (libraries base))

(executable
 (name test)
 (modules test)
 (libraries base ounit2 bob))

(alias
  (name    runtest)
  (deps    (:x test.exe))
  (action  (run %{x})))

(alias
  (name    buildtest)
  (deps    (:x test.exe)))

(env
  (dev
    (flags (:standard -warn-error -A))))
