(library
  (name collatz_conjecture)
  (modules collatz_conjecture))

(executable
 (name test)
 (modules test)
 (libraries ounit2 collatz_conjecture))

(alias
 (name runtest)
 (deps
  (:x test.exe))
 (action
  (run %{x})))

(alias
 (name buildtest)
 (deps
  (:x test.exe)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
