(library
 (name difference_of_squares)
 (modules difference_of_squares)
 (libraries base))

(executable
 (name test)
 (modules test)
 (libraries base ounit2 difference_of_squares))

(alias
  (name    runtest)
  (deps    (:x test.exe))
  (action  (run %{x})))

(alias
  (name    buildtest)
  (deps    (:x test.exe)))

(env
  (dev
    (flags (:standard -warn-error -A))))