(library
 (name leap)
 (modules leap)
 (libraries base))

(executable
 (name test)
 (modules test)
 (libraries base ounit2 leap))

(alias
  (name    runtest)
  (deps    (:x test.exe))
  (action  (run %{x})))

(alias
  (name    buildtest)
  (deps    (:x test.exe)))

(env
  (dev
    (flags (:standard -warn-error -A))))